samples/_failures_safe/1761534804_b21d64_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f4732ed.c: In function ‘print_token’:
./samples/SAFE/__tmp_4f4732ed.c:173:66: error: ‘type’ undeclared (first use in this function)
  173 |     printf("Line %d, Column %d: %s", token->line, token->column, type
      |                                                                  ^~~~
./samples/SAFE/__tmp_4f4732ed.c:173:66: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_4f4732ed.c:173:70: error: expected ‘)’ at end of input
  173 |     printf("Line %d, Column %d: %s", token->line, token->column, type
      |           ~                                                          ^
      |                                                                      )
./samples/SAFE/__tmp_4f4732ed.c:173:5: error: expected declaration or statement at end of input
  173 |     printf("Line %d, Column %d: %s", token->line, token->column, type
      |     ^~~~~~
